--- a/css/style.css
+++ b/css/style.css
@@ -263,44 +263,23 @@ h3 {
   list-style: none;
 }
 
+.advantages-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background: var(--bg-secondary-color);
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
 .advantages .advantages-list {
   width: calc((100% - 90px) / 4);
 }
 
 .advantages .advantages-list:not(:nth-child(4n)) {
   margin-right: 30px;
-}
-
-.advantages .advantages-list::before {
-  content: '';
-  display: block;
-  height: 120px;
-  background: var(--bg-secondary-color);
-  margin-bottom: 30px;
-}
-
-.advantages-list.icon-nasa-link::before {
-  background-image: url('../images/icons/nasa-link.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.advantages-list.icon-clock::before {
-  background-image: url('../images/icons/clock.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.advantages-list.icon-diagram::before {
-  background-image: url('../images/icons/diagram.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.advantages-list.icon-astronaut::before {
-  background-image: url('../images/icons/astronaut.svg');
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .advantages .advantages-title {
