--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,8 @@ h3 {
   background-color: var(--main-blue-color);
   color: var(--third-text-color);
   border-color: transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* !Примеры работ */
